# CMake

./: CMakeLists.txt
01-basic/B-hello-headers/: hello_headers
learn/: CMakeLists.txt  main.cpp
learn-subproj/: CMakeLists.txt
learn-subproj/include/: tool.h
learn-subproj/src/: main.cpp  tool.c
learn-subproj/third/amr/: CMakeLists.txt
learn-subproj/third/amr/src/: Amr.cpp
learn-subproj/third/opus/: CMakeLists.txt
learn-subproj/third/opus/include/: Opus.h
learn/include/: HelloCmake.h
learn/src/: HelloCmake.cpp
learn/third/amr/include/: Amr.h
learn/third/opus/src/: Opus.cpp
